--- a/RetirementSaving.html
+++ b/RetirementSaving.html
@@ -19,10 +19,10 @@
                 <nav>
                     <ul>
                         <li><a href="index.html#cover">首頁</a></li>
-                        <li><a href="aboutMe.html">關於我</a></li>
-                        <li><a href="index.html#collection">作品集</a></li>
-                        <li><a href="contact.html">聯絡資訊</a></li>
-                        <li><a href="#retirementsaving">退休準備計算機</a></li>
+                        <li><a href="ProfitLossCalculation.html">損益試算</a></li>
+                        <li><a href="RetirementSaving.html">退休準備計算機</a></li>
+                        <li><a href="https://sophieuen2003.github.io/mypage/">回個人網站</a></li>
+                    </ul>
                     </ul>
                 </nav>
             </header>
@@ -73,8 +73,11 @@
                     </p>
                     <p style="font-size:13px; margin-top: 0; margin-bottom: 2%;">銀行 0.01%、定存 1%、保險 2%、債券基金 4%、股市投資 10%</p>
                     <p>
-                        <input id="clickMe" type="button" class="btn btn-outline-secondary" value="calculate" onclick="calculateSaving();" style="background-color: transparent; color: #ffffff;background-color: #949d9a; border: 1px solid #949d9a; padding: 13px ; width: 100px; border-radius: 5px; margin-bottom: 7%;" />
+                        <input id="clickMe" type="button" class="btn btn-outline-secondary" value="calculate" onclick="calculateSaving();">
                     </p>
+                    <!-- <p>
+                        <input id="clickMe" type="button" class="btn btn-outline-secondary" value="calculate" onclick="calculateSaving();" style="background-color: transparent; color: #ffffff;background-color: #949d9a; border: 1px solid #949d9a; padding: 13px ; width: 100px; border-radius: 5px; margin-bottom: 7%;" />
+                    </p> -->
                     <p class="calculate_reserves" id="reserves"style="display: none">每月至少應再投入:</p>
                     <button style="display:none;"onclick="document.getElementById('').style.display='block'"></button>
             </div>
