--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
   <div>
     <header>
       <bottom class="menu">&#9776</bottom>
-      <h2><a href="#cover">Sophie's website</a></h2>
+      <h2><a href="#cover">Hoya Wolf</a></h2>
       <nav>
         <ul>
-          <li><a href="#cover">首頁</a></li>
-          <li><a href="aboutMe.html">關於我</a></li>
-          <li><a href="#collection">作品集</a></li>
-          <li><a href="contact.html">聯絡資訊</a></li>
+          <li><a href="index.html#cover">首頁</a></li>
+          <li><a href="ProfitLossCalculation.html">損益試算</a></li>
           <li><a href="RetirementSaving.html">退休準備計算機</a></li>
+          <li><a href="https://sophieuen2003.github.io/mypage/">回主頁</a></li>
         </ul>
       </nav>
     </header>
@@ -30,118 +29,12 @@
     <main>
 
       <section id="cover" class="cover">
-        <h3>Hello, I'm</h3>
-        <h2>Sophie</h2>
-        <h2>Uen</h2>
-        <p>Welcome to my website</p>
-        <p><a href="aboutMe.html">瞭解更多</a></p>
+        <h3>Hello, this is</h3>
+        <h2>Hoya Wolf</h2>
+        <h3><br>your financial steward</h3>
+        <p>Welcome to Hoya Wolf, where we assist you with financial management.</p>
+        <p><a href="ProfitLossCalculation.html">馬上開始</a></p>
       </section>
-
-      <table class="table table-borderless table-info">
-        <thead class="text-center align-middle">
-          <tr>
-            <th colspan="3" class="p-4">
-              <h3 class="display-6"><strong>人生中最重要的三件事</strong></h3>
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <img src="images/yushan-1.jpg" class="rounded mx-auto d-block img-fluid" alt="登上玉山">
-            </td>
-            <td>
-              <img src="images/badminton-1.jpg" class="rounded mx-auto d-block" alt="打羽球">
-            </td>
-            <td class="pr-3">
-              <img src="images/powertech.jpg" class="rounded mx-auto d-block" alt="powertech">
-            </td>
-          </tr>
-          <tr class="text-center">
-            <td>
-              <h3><strong>攻頂玉山<strong></h3>
-            </td>
-            <td>
-              <h3><strong>打羽球</strong></h3>
-            </td>
-            <td class="pr-3">
-              <h3><strong>全國powertech競賽</strong></h3>
-            </td>
-          <tr class="text-center" style="line-height:30px;">
-            <td>
-              <p style="font-size:18px;"><strong>堅持到底</strong><br>養成不輕易放棄的精神</p>
-            </td>
-            <td>
-              <p style="font-size:18px;"><strong>身體健康</strong><br>享受揮灑汗水的時光</p>
-            </td>
-            <td class="pr-3">
-              <p style="font-size:18px;"><strong>實作能力</strong><br>找到動手創作的樂趣</p>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-
-      <table id="collection" class="table table-borderless">
-        <thead class="text-center align-middle">
-          <tr>
-            <th colspan="2" class="p-4">
-            </th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="text-center pb-3">
-              <img src="images/world-wide-web.png" style="width:20%" alt="web">
-            </td>
-            <td class="text-center pb-3">
-              <img src="images/code.png" style="width:20%;" alt="PL">
-            </td>
-          </tr>
-          <tr class="text-center pb-5">
-            <td class="pb-4">
-              <h3><strong>網際網路概論<br>Introduction to the Internet</strong></h3>
-            </td>
-            <td>
-              <h3><strong>程式語言<br>Programming Language</strong></h3>
-            </td>
-          <tr class="text-center">
-            <td>
-              <p><strong>使用的程式語言</strong></p>
-              <p>HTML<br>css<br>JavaScript</p>
-            </td>
-            <td valign="middle">
-              <p><strong>使用的程式語言</strong></p>
-              <p>Python</p>
-            </td>
-          </tr>
-          <tr>
-            <td class="text-center">
-              <button type="button" class="btn btn-outline-info"><a href="https://github.com/sophieuen2003/1121web">know
-                  more</a></button>
-            </td>
-            <td class="text-center">
-              <button type="button" class="btn btn-outline-info"><a href="https://github.com/sophieuen2003/1121PL">know
-                  more</a></button>
-        </tbody>
-      </table>
-
-      <section id=contact class="contact">
-        <div class="profile pt-3 pb-3" style="line-height: 2rem;">
-          <p>If you want to know more about me<br>connect with email or IG below.</p>
-          <p>
-            <font color="#c8db72;">Email&ensp;:&ensp;sophieuen007@gmail.com&ensp;&ensp;</font>
-            <a href="mailto: sophieuen007@gmail.com"><img src="images/gmail.png"></a>
-          </p>
-          <p>
-            <font color="#c8db72;">
-              instagram&ensp;:&ensp;uenhanhan&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;&ensp;
-            </font>
-            <a href="https://www.instagram.com/uenhanhan/"><img src="images/instagram.png"></a>
-          </p>
-        </div>
-      </section>
-
-    </main>
 
     <footer>
       <p>Copyright © 2023 Sophie. All rights reserved.</p>
